--- a/pom.xml
+++ b/pom.xml
@@ -22,15 +22,21 @@
         </dependency>
 
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+            <version>3.6.1</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.orientechnologies</groupId>
             <artifactId>orientdb-core</artifactId>
-            <version>3.0.0-SNAPSHOT</version>
+            <version>2.2.14-SNAPSHOT</version>
         </dependency>
 
         <dependency>
             <groupId>com.orientechnologies</groupId>
             <artifactId>orientdb-graphdb</artifactId>
-            <version>3.0.0-SNAPSHOT</version>
+            <version>2.2.14-SNAPSHOT</version>
         </dependency>
 
         <dependency>
