--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,11 @@
                     <optimize>true</optimize>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.5.0</version>
+            </plugin>
         </plugins>
     </build>
 </project>
