--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,11 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.5.0</version>
+                <configuration>
+                    <arguments>
+                        <argument> -XX:MaxDirectMemorySize=64260m</argument>
+                    </arguments>
+                </configuration>
             </plugin>
         </plugins>
     </build>
