--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,13 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.5.0</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
                     <commandlineArgs>-XX:MaxDirectMemorySize=64260m</commandlineArgs>
                 </configuration>
